Added grading system for faculty

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -60,9 +60,10 @@
 
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Class (for students) or Mentoring Class (for
-                    mentors)</label>
+                    mentors) </label>
+                <p class="text-muted">Eg: 20AML 2, 20CSE 1, 19CSE 10</p>
                 <input type="text" class="form-control" name="class" id="exampleInputEmail1"
-                    aria-describedby="emailHelp" placeholder="Enter Class (Eg: 20AML 2" required>
+                    aria-describedby="emailHelp" placeholder="Enter Class (Eg: 20AML 2, 20CSE 1, 19CSE 10)" required>
             </div>
 
             <div class="mb-3">
@@ -71,7 +72,6 @@
                     <option selected>Choose...</option>
                     <option value="a">A</option>
                     <option value="b">B</option>
-                    <option value="c">C</option>
                 </select required>
             </div>
 
