--- a/views/teachersview/dashboard.ejs
+++ b/views/teachersview/dashboard.ejs
@@ -23,22 +23,26 @@
                 <div class="Dashboard">
                     <nav class="navbar navbar-light bg-white">
                         <div class="container-fluid">
-                            <h1 class="navbar-brand ms-auto me-auto mb-0 h1" style="text-align: center;">20 AIML - A
+                            <h1 class="navbar-brand ms-auto me-auto mb-0 h1" style="text-align: center;">
+                                Class: <%= user.profile.class.toUpperCase() %>
                             </h1>
                         </div>
                     </nav>
 
-                    <div class="row mt-2">
-
-                        <a href="/mentor-dashboard/view-students" class="cardLink col-sm-4">
-                            <div class="card topCards">
-                                <div class="card-body">
-                                    <h3 class="card-title">View Students</h3>
+                    <center>
+                        <div class="col-md-8 mt-3 mr-10 ml-10" style="border-radius: 30px;">
+                            <a href="/mentor-dashboard/view-students" class="cardLink col-sm-4">
+                                <div class="card topCards">
+                                    <div class="card-body">
+                                        <h3 class="card-title">View Students</h3>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
+                    </center>
 
-                        <!-- <a href="#" class="cardLink col-sm-4">
+
+                    <!-- <a href="#" class="cardLink col-sm-4">
                             <div class="card topCards">
                                 <div class="card-body">
                                     <h3 class="card-title">Certifications Registered</h3>
@@ -53,15 +57,14 @@
                                 </div>
                             </div>
                         </a> -->
-                    </div>
 
-                    <div class="container-fluid mt-5 col-md-6">
+                    <!-- <div class="container-fluid mt-5 col-md-6">
                         <h5 style="text-align: center;" class="mb-2">Student Search</h5>
                         <form class="d-flex">
                             <input class="form-control me-2" type="search" placeholder="Search UID" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
 
         </div>
